2000-04-12  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (cALLOc): Clear only what the user asked for and
	avoid writing over boundary.
	Patch by Greg McGary <gkm@eng.ascend.com>.

	* sysdeps/arm/memprof.h: New file.

2000-04-12  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/i386/i586/clock_gettime.c: Fix typo.

	* sysdeps/unix/sysv/linux/i386/get_clockfreq.c: Include <string.h>
	for memmem declaration.

2000-04-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/clock_gettime.c (clock_gettime): Initialize retval
	to -1.
	* sysdeps/posix/clock_getres.c (clock_getres): Likewise.

	* libio/iopopen.c (_IO_new_proc_open): Close pipes in case the
	mode is invalid.
	* libio/oldiopopen.c (_IO_old_proc_open): Likewise.
	Patch by Bart Veer <bartv@redhat.com>.

	* sysdeps/arm/dl-machine.h (RTLD_START): Rewrite for new init
	function interface.

2000-04-11  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/dl-machine.h: Update some comments.
	(ELF_MACHINE_ALIGN_MASK): Removed, it's not needed.

2000-04-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Add
	_POSIX_SHARED_MEMORY_OBJECTS.

	* rt/Makefile (tests): Add tst-shm.
	Add rules to generate tst-shm.
	* rt/tst-shm.c: New file.

	* sysdeps/unix/sysv/linux/shm_open.c (shm_open): Set FD_CLOEXEC
	for descriptor.

	* misc/sys/mman.h: Add prototypes for shm_open and shm_unlink.
	* rt/Makefile (librt-routines): Add shm_open and shm_unlink.
	* rt/Versions [librt] (GLIBC_2.2): Add shm_open and shm_unlink.
	* sysdeps/generic/shm_open.c: New file.
	* sysdeps/generic/shm_unlink.c: New file.
	* sysdeps/unix/sysv/linux/shm_open.c: New file.
	* sysdeps/unix/sysv/linux/shm_unlink.c: New file.
	* sysdeps/unix/sysv/linux/Versions [libc] (GLIBC_2.2): Export
	 __endmntent, __getmntent_r, __setmntent, and __statfs.

	* libio/vasprintf.c (_IO_vasprintf): Try to avoid memory
	fragmentation by allocating new memory at the end instead of
	reallocating.

	* posix/globtest.sh: Fix last change.
