@@ -1,5 +1,8 @@
 2000-04-12  Ulrich Drepper  <drepper@redhat.com>
 
+	* locale/programs/locale.c (show_info): Don't try to look into
+	data for LC_ALL (there is none).
+
 	* malloc/malloc.c (cALLOc): Clear only what the user asked for and
 	avoid writing over boundary.
 	Patch by Greg McGary <gkm@eng.ascend.com>.
